--- a/Rental Orders Report.rdlc
+++ b/Rental Orders Report.rdlc
@@ -430,7 +430,8 @@
               </TablixMembers>
             </TablixRowHierarchy>
             <DataSetName>DataSet_Result</DataSetName>
-            <Left>0.29389in</Left>
+            <Top>1.16667in</Top>
+            <Left>0.31472in</Left>
             <Height>0.5in</Height>
             <Width>6in</Width>
             <Style>
